--- a/index.html
+++ b/index.html
@@ -1,12 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap 101 Template</title>
+    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 </head>
 <body>
+<nav class="navbar navbar-inverse">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="collapsed navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-9" aria-expanded="false"><span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
+            <a href="#" class="navbar-brand">EZ NOOB</a></div>
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#"><i class="glyphicon glyphicon-home"></i>About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<h1>Hi, EZ NOOB</h1>
+<div class="container">
+    <h1>Example page header
+        <small>Subtext for header</small>
+    </h1>
+    <hr class="divider">
+    <div class="row">
+        <div class="col-md-7">
+            <div class="thumbnail">
+                <img src="http://placehold.it/700x300" alt="">
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="caption"><h3>CMRU label</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
+                    illum
+                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
+                    voluptatem
+                    voluptatibus.</p>
+                <p>
+                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr class="divider">
+</div>
+<div class="container">
+    <h1>Example page header
+        <small>Subtext for header</small>
+    </h1>
+    <hr class="divider">
+    <div class="row">
+        <div class="col-md-7">
+            <div class="thumbnail">
+                <img src="http://placehold.it/700x300" alt="">
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="caption"><h3>CMRU label</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
+                    illum
+                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
+                    voluptatem
+                    voluptatibus.</p>
+                <p>
+                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr class="divider">
+</div>
+<div class="container">
+    <h1>Example page header
+        <small>Subtext for header</small>
+    </h1>
+    <hr class="divider">
+    <div class="row">
+        <div class="col-md-7">
+            <div class="thumbnail">
+                <img src="http://placehold.it/700x300" alt="">
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="caption"><h3>CMRU label</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
+                    illum
+                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
+                    voluptatem
+                    voluptatibus.</p>
+                <p>
+                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr class="divider">
+</div>
+<div class="container">
+    <h1>Example page header
+        <small>Subtext for header</small>
+    </h1>
+    <hr class="divider">
+    <div class="row">
+        <div class="col-md-7">
+            <div class="thumbnail">
+                <img src="http://placehold.it/700x300" alt="">
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="caption"><h3>CMRU label</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
+                    illum
+                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
+                    voluptatem
+                    voluptatibus.</p>
+                <p>
+                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr class="divider">
+</div>
+<div class="container">
+    <h1>Example page header
+        <small>Subtext for header</small>
+    </h1>
+    <hr class="divider">
+    <div class="row">
+        <div class="col-md-7">
+            <div class="thumbnail">
+                <img src="http://placehold.it/700x300" alt="">
+            </div>
+        </div>
+        <div class="col-md-5">
+            <div class="caption"><h3>CMRU label</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
+                    illum
+                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
+                    voluptatem
+                    voluptatibus.</p>
+                <p>
+                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
+                </p>
+            </div>
+        </div>
+    </div>
 
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            <li>
+                <a href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">5</a></li>
+            <li>
+                <a href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <hr class="divider">
+</div>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="bower_components/jquery/dist/jquery.min.js"></script>
 </body>
 </html>
