--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="bower_components/animate.css/animate.min.css">
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -32,7 +34,7 @@
         <small>Subtext for header</small>
     </h1>
     <hr class="divider">
-    <div class="row">
+    <div class="row animated flipInX">
         <div class="col-md-7">
             <div class="thumbnail">
                 <img src="http://placehold.it/700x300" alt="">
@@ -46,7 +48,7 @@
                     voluptatem
                     voluptatibus.</p>
                 <p>
-                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
+                    <a href="#" class="btn btn-danger animated infinite flipInX" role="button"><i class="fa fa-cogs fa-spin fa-4x" aria-hidden="true"></i></i>อ่านต่อ</a>
                 </p>
             </div>
         </div>
