--- a/index.html
+++ b/index.html
@@ -35,149 +35,171 @@
     </h1>
     <hr class="divider">
     <div class="row animated flipInX">
-        <div class="col-md-7">
+        <div class="col-xs-12 col-sm-4">
             <div class="thumbnail">
                 <img src="http://placehold.it/700x300" alt="">
             </div>
         </div>
-        <div class="col-md-5">
+        <div class="col-xs-12 col-sm-8">
             <div class="caption"><h3>CMRU label</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
+                <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores
+                    eligendi enim fuga,
                     illum
                     ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
                     voluptatem
                     voluptatibus.</p>
                 <p>
-                    <a href="#" class="btn btn-danger animated infinite flipInX" role="button"><i class="fa fa-cogs fa-spin fa-4x" aria-hidden="true"></i></i>อ่านต่อ</a>
+                    <a href="#" class="btn btn-danger animated swing" role="button"><i class="fa fa-cogs fa-spin fa-3x"
+                                                                                       aria-hidden="true"></i></i>
+                        อ่านต่อ</a>
                 </p>
             </div>
         </div>
     </div>
     <hr class="divider">
 </div>
-<div class="container">
-    <h1>Example page header
-        <small>Subtext for header</small>
-    </h1>
-    <hr class="divider">
-    <div class="row">
-        <div class="col-md-7">
-            <div class="thumbnail">
-                <img src="http://placehold.it/700x300" alt="">
-            </div>
-        </div>
-        <div class="col-md-5">
-            <div class="caption"><h3>CMRU label</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
-                    illum
-                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
-                    voluptatem
-                    voluptatibus.</p>
-                <p>
-                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <hr class="divider">
-</div>
-<div class="container">
-    <h1>Example page header
-        <small>Subtext for header</small>
-    </h1>
-    <hr class="divider">
-    <div class="row">
-        <div class="col-md-7">
-            <div class="thumbnail">
-                <img src="http://placehold.it/700x300" alt="">
-            </div>
-        </div>
-        <div class="col-md-5">
-            <div class="caption"><h3>CMRU label</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
-                    illum
-                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
-                    voluptatem
-                    voluptatibus.</p>
-                <p>
-                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <hr class="divider">
-</div>
-<div class="container">
-    <h1>Example page header
-        <small>Subtext for header</small>
-    </h1>
-    <hr class="divider">
-    <div class="row">
-        <div class="col-md-7">
-            <div class="thumbnail">
-                <img src="http://placehold.it/700x300" alt="">
-            </div>
-        </div>
-        <div class="col-md-5">
-            <div class="caption"><h3>CMRU label</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
-                    illum
-                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
-                    voluptatem
-                    voluptatibus.</p>
-                <p>
-                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
-                </p>
-            </div>
-        </div>
-    </div>
-    <hr class="divider">
-</div>
-<div class="container">
-    <h1>Example page header
-        <small>Subtext for header</small>
-    </h1>
-    <hr class="divider">
-    <div class="row">
-        <div class="col-md-7">
-            <div class="thumbnail">
-                <img src="http://placehold.it/700x300" alt="">
-            </div>
-        </div>
-        <div class="col-md-5">
-            <div class="caption"><h3>CMRU label</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores eligendi enim fuga,
-                    illum
-                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
-                    voluptatem
-                    voluptatibus.</p>
-                <p>
-                    <a href="#" class="btn btn-danger" role="button">อ่านต่อ</a>
-                </p>
-            </div>
-        </div>
-    </div>
 
-    <nav aria-label="Page navigation">
-        <ul class="pagination">
-            <li>
-                <a href="#" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li><a href="#">1</a></li>
-            <li><a href="#">2</a></li>
-            <li><a href="#">3</a></li>
-            <li><a href="#">4</a></li>
-            <li><a href="#">5</a></li>
-            <li>
-                <a href="#" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+<div class="container">
+    <h1>Example page header
+        <small>Subtext for header</small>
+    </h1>
     <hr class="divider">
+    <div class="row animated flipInX">
+        <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+                <img src="http://placehold.it/700x300" alt="">
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-8">
+            <div class="caption"><h3>CMRU label</h3>
+                <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores
+                    eligendi enim fuga,
+                    illum
+                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
+                    voluptatem
+                    voluptatibus.</p>
+                <p>
+                    <a href="#" class="btn btn-danger animated swing" role="button"><i class="fa fa-cogs fa-spin fa-3x"
+                                                                                       aria-hidden="true"></i></i>
+                        อ่านต่อ</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr class="divider">
+</div>
+
+<div class="container">
+    <h1>Example page header
+        <small>Subtext for header</small>
+    </h1>
+    <hr class="divider">
+    <div class="row animated flipInX">
+        <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+                <img src="http://placehold.it/700x300" alt="">
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-8">
+            <div class="caption"><h3>CMRU label</h3>
+                <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores
+                    eligendi enim fuga,
+                    illum
+                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
+                    voluptatem
+                    voluptatibus.</p>
+                <p>
+                    <a href="#" class="btn btn-danger animated swing" role="button"><i class="fa fa-cogs fa-spin fa-3x"
+                                                                                       aria-hidden="true"></i></i>
+                        อ่านต่อ</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr class="divider">
+</div>
+
+<div class="container">
+    <h1>Example page header
+        <small>Subtext for header</small>
+    </h1>
+    <hr class="divider">
+    <div class="row animated flipInX">
+        <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+                <img src="http://placehold.it/700x300" alt="">
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-8">
+            <div class="caption"><h3>CMRU label</h3>
+                <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores
+                    eligendi enim fuga,
+                    illum
+                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
+                    voluptatem
+                    voluptatibus.</p>
+                <p>
+                    <a href="#" class="btn btn-danger animated swing" role="button"><i class="fa fa-cogs fa-spin fa-3x"
+                                                                                       aria-hidden="true"></i></i>
+                        อ่านต่อ</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr class="divider">
+</div>
+
+<div class="container">
+    <h1>Example page header
+        <small>Subtext for header</small>
+    </h1>
+    <hr class="divider">
+    <div class="row animated flipInX">
+        <div class="col-xs-12 col-sm-4">
+            <div class="thumbnail">
+                <img src="http://placehold.it/700x300" alt="">
+            </div>
+        </div>
+        <div class="col-xs-12 col-sm-8">
+            <div class="caption"><h3>CMRU label</h3>
+                <p class="hidden-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias at dolores
+                    eligendi enim fuga,
+                    illum
+                    ipsum itaque, maxime natus qui quia quibusdam, quo reprehenderit repudiandae similique vel
+                    voluptatem
+                    voluptatibus.</p>
+                <p>
+                    <a href="#" class="btn btn-danger animated swing" role="button"><i class="fa fa-cogs fa-spin fa-3x"
+                                                                                       aria-hidden="true"></i></i>
+                        อ่านต่อ</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <hr class="divider">
+    <div class="row col-md-12">
+        <div class="col-md-offset-9">
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li>
+                        <a href="#" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                    <li><a href="#">3</a></li>
+                    <li><a href="#">4</a></li>
+                    <li><a href="#">5</a></li>
+                    <li>
+                        <a href="#" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
